--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+#requirements.txt
 pandas==2.2.2
 numpy==2.0.2
 matplotlib==3.10.0
@@ -8,3 +9,5 @@ scipy==1.15.3
 scikit-learn==1.6.1
 tqdm==4.67.1
 beautifulsoup4==4.13.4
+duckdb==1.3.2
+python-dotenv==1.1.1
